--- a/src/styleguide/variables.scss
+++ b/src/styleguide/variables.scss
@@ -5,7 +5,7 @@ $color-black-3: #888888;
 $color-gray-1: #8c8c8c;
 $color-gray-2: #cccccc;
 $color-gray-3: #eeeeee;
-$color-gray-4: #f7f7f7;
+$color-gray-4: #fafafa;
 $color-gray-5: #f9f9f9f9;
 $color-white: #ffffff;
 $color-white-1: #fafafa;
