--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
@@ -3,39 +3,55 @@
   @include onboarding-host;
   place-content: flex-start !important;
 }
-.header-content {
-  border-bottom: thin $color-gray-3 solid;
-  padding-bottom: 35px;
+.upload-thumb {
+  > div {
+    height: 150px;
+    width: 150px;
+    border: thin $color-gray-2 dashed;
+    border-radius: 2px;
+    background-color: $color-gray-3;
+    text-align: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+    cursor: pointer;
+  }
+  flex-direction: column;
+  box-sizing: border-box;
+  display: flex;
+  place-content: center;
+  align-items: center;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  max-width: 150px;
+  width: 150px;
+  text-align: center;
+  span {
+    font-size: 12px;
+  }
+  img {
+    height: 25px;
+    width: 25px;
+    margin-bottom: 10px;
+  }
 }
-.detail-container {
+.upload-container {
   padding: 30px;
   margin: 0 auto;
   width: 100%;
   height: 100%;
   box-shadow: $box-shadow;
   background-color: $color-white;
-  max-width: 900px;
+  max-width: 800px;
 }
 .content {
   margin-bottom: 20px;
   overflow: hidden;
   height: 100%;
-}
-.content-personal {
-  h5 {
-    margin: 0 0 14px 0;
-  }
-  height: auto;
-  min-width: 650px;
-  padding-left: 10px;
-}
-.spouse-personal {
-  h5 {
-    margin: 0 0 14px 0;
-  }
-  height: auto;
-  min-width: 650px;
-  padding-left: 10px;
+  max-width: 675px;
 }
 .action-btns {
   margin-top: 20px;
@@ -53,25 +69,15 @@
   }
 }
 @media (max-width: 1280px) {
-  .detail-container {
+  .upload-container {
     max-width: 100%;
     margin: 0;
     padding: 20px 20px;
     max-width: 100%;
   }
-  .header-content {
-    padding-bottom: 20px;
-    margin: 0 !important;
-  }
   .content {
     padding-top: 20px;
     width: 100%;
-  }
-  .content-personal, .spouse-personal {
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    max-width: 845px;
   }
   h2 {
     margin-bottom: 10px !important;
