--- a/src/app/modules/on-boarding/components/on-boarding-page/on-boarding-page.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-page/on-boarding-page.component.html
@@ -1,3 +1,3 @@
-<div fxLayout="column" fxLayoutAlign="start start" >
+<div fxLayout="column" fxLayoutAlign="center center" >
   <router-outlet></router-outlet>
 </div>
