--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -1,13 +1,14 @@
-<div class="detail-container" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20px">
-  <h2>Review</h2>
+<div class="detail-container" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20px" >
+  <div>
+    <h2>Review</h2>
+  </div>
 
   <div class="header-content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
     <div class="w-100" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="15px">
       <cma-input label="Building #" [value]="'Building #9'"></cma-input>
       <cma-input label="Unit #" [value]="'Unit #9622'"></cma-input>
       <cma-input label="Parking Slot #" [value]="'Parking Slot #01'"></cma-input>
-    </div>
-    <div class="w-100" fxLayout="row" fxLayoutAlign="center center">
+
       <cma-input label="Occupant Type" [value]="'Unit Owner'"></cma-input>
     </div>
   </div>
@@ -53,17 +54,27 @@
           <cma-input [readOnly]="true" label="Occupation" [value]="'none'"></cma-input>
           <cma-input [readOnly]="true" label="Bus. Address" [value]="'none'"></cma-input>
           <cma-input [readOnly]="true" label="Bus. Contact No." [value]="'none'"></cma-input>
-          
-          <cma-input [readOnly]="true" label="Bus. Email" [value]="'none'" ></cma-input>
+
+          <cma-input [readOnly]="true" label="Bus. Email" [value]="'none'"></cma-input>
           <cma-input [readOnly]="true" label="ID Type" [value]="'Phil Health'"></cma-input>
           <cma-input [readOnly]="true" label="ID No." [value]="'1234 123 123'"></cma-input>
           <cma-input [readOnly]="true" label="Upload" [value]="'test_img.png'"></cma-input>
+        </div>
       </div>
+    </div>
+
+    <!-- documents -->
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="5px">
+      <div *ngFor="let document of uploadDocuments" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
+        <img [src]="svgPath + 'word.svg'" />
+        <span>{{ document?.label }}</span>
+      </div>
+    </div>
+
+    <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <button pButton pRipple type="button" routerLink="/on-boarding/upload" label="Previous" class="p-button-rounded p-button-secondary"></button>
+      <button pButton pRipple type="button" routerLink="/on-boarding/for-approval" label="Submit" class="p-button-rounded  p-button-success"></button>
     </div>
   </div>
 
-  <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-    <button pButton pRipple type="button" routerLink="/on-boarding/detail" label="Previous" class="p-button-rounded p-button-secondary"></button>
-    <button pButton pRipple type="button" label="Submit" class="p-button-rounded  p-button-success"></button>
-  </div>
 </div>
