--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@ body {
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  color: $color-black-2;
+  color: $color-black-1;
+  background-color: $color-gray-4;
 }
 h1,
 h2,
