--- a/src/app/modules/on-boarding/components/on-boarding-for-approval/on-boarding-for-approval.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-for-approval/on-boarding-for-approval.component.html
@@ -4,5 +4,5 @@
   <h5>One oasis will email you after all information are reviewed.</h5>
 
 
-  <button [disabled]="isDisabled" routerLink="/on-boarding/landing-page" pButton pRipple type="button" label="Done" class="p-button-rounded"></button>
+  <button [disabled]="isDisabled" routerLink="/on-boarding/type" pButton pRipple type="button" label="Done" class="p-button-rounded"></button>
 </div>
