--- a/src/app/modules/on-boarding/components/on-boarding-detail/on-boarding-detail.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-detail/on-boarding-detail.component.html
@@ -26,7 +26,7 @@
           <cma-dropdown [options]="genderOptions" placeholder="Gender"></cma-dropdown>
           <cma-dropdown [options]="civilOptions" placeholder="Civil Status"></cma-dropdown>
 
-          <cma-input label="Date of Birth"></cma-input>
+          <cma-datepicker placeholder="Date of Birth"></cma-datepicker>
           <cma-input label="Occupation"></cma-input>
           <cma-input label="TIN"></cma-input>
 
