--- a/src/app/shared/components/cma-select-option/cma-select-option.component.html
+++ b/src/app/shared/components/cma-select-option/cma-select-option.component.html
@@ -1,1 +1,1 @@
-<p-selectButton [options]="options" [(ngModel)]="selectedItem" optionLabel="label" optionValue="value"></p-selectButton>
+<p-selectButton appendTo="body" [options]="options" [(ngModel)]="selectedItem" optionLabel="label" optionValue="value"></p-selectButton>
