--- a/src/app/shared/components/cmd-dropdown/cmd-dropdown.component.html
+++ b/src/app/shared/components/cmd-dropdown/cmd-dropdown.component.html
@@ -1,4 +1,4 @@
-<p-dropdown class="dropdown" [options]="options" [(ngModel)]="selectedItem" optionLabel="label" filterBy="label" [placeholder]="placeholder">
+<p-dropdown appendTo="body" class="dropdown" [options]="options" [(ngModel)]="selectedItem" optionLabel="label" filterBy="label" [placeholder]="placeholder">
   <ng-template pTemplate="selectedItem">
     <div *ngIf="selectedItem">
       <div>{{selectedItem?.label}}</div>
