--- a/src/app/shared/components/cma-dropdown-search/cma-dropdown-search.component.html
+++ b/src/app/shared/components/cma-dropdown-search/cma-dropdown-search.component.html
@@ -1,4 +1,4 @@
-<p-dropdown [options]="options" [(ngModel)]="selectedItem" optionLabel="label" [filter]="true" filterBy="label" [showClear]="true" [placeholder]="placeholder">
+<p-dropdown appendTo="body" [options]="options" [(ngModel)]="selectedItem" optionLabel="label" [filter]="true" filterBy="label" [showClear]="true" [placeholder]="placeholder">
   <ng-template pTemplate="selectedItem">
     <div *ngIf="selectedItem">
       <div>{{selectedItem?.label}}</div>
