--- a/src/styleguide/variables.scss
+++ b/src/styleguide/variables.scss
@@ -12,12 +12,16 @@ $color-white-1: #fafafa;
 
 $color-primary: #1e8ae6;
 
-$color-green: #34a853; 
+$color-blue:#2196F3;
+
+$color-green: #34a853;
 $color-green-1: #22cc96;
-$color-green-2:  #7ae0c0;
+$color-green-2: #7ae0c0;
 $color-green-3: #c3eacd;
 
 $color-red: #f05350;
+
+$color-orange: #f05350;
 
 
 $box-shadow: 0px 4px 17px -11px rgba(0, 0, 0, 0.25);
