--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
 }
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: $color-black-1;
   background-color: $color-gray-4;
 }
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
 }
 h1 {
@@ -34,13 +34,6 @@ h4 {
 }
 h5 {
   font-size: 14px;
-}
-html, body { height: 100%; }
-body { 
-  margin: 0;
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
 }
 .mt-2 {
   margin-top: 20px;
