--- a/src/app/modules/dashboard/dashboard-on-boarding/dashboard-on-boarding.component.html
+++ b/src/app/modules/dashboard/dashboard-on-boarding/dashboard-on-boarding.component.html
@@ -1,1 +1,5 @@
-<cma-dashboard-on-boarding-panel></cma-dashboard-on-boarding-panel>
+
+<div fxLayout="column" fxLayoutAlign="start start">
+  <cma-breadcrumb [items]="breadCrumbItems"></cma-breadcrumb>
+  <cma-dashboard-on-boarding-panel></cma-dashboard-on-boarding-panel>
+</div>
