--- a/src/app/modules/dashboard/dashboard-page/dashboard-page.component.html
+++ b/src/app/modules/dashboard/dashboard-page/dashboard-page.component.html
@@ -1,3 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center center" >
+<div class="dashboard-page-container" fxLayout="column" fxLayoutAlign="center center" >
+  <cma-cma-top-nav></cma-cma-top-nav>
   <router-outlet></router-outlet>
 </div>
