--- a/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
+++ b/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
@@ -1,20 +1,181 @@
 <mat-accordion>
-  <mat-expansion-panel *ngFor="let boarder of onboaders" >
+  <mat-expansion-panel *ngFor="let boarder of onboaders; let i = index" [expanded]="i === 0">
     <mat-expansion-panel-header>
       <mat-panel-title>
         <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
           <img [src]="imgPath + 'sample-profile-pic.png'" />
-          <span>{{ boarder?.name }}</span>
+          <span class="name">{{ boarder?.name }}</span>
         </div>
       </mat-panel-title>
       <mat-panel-description>
         <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
-          <p-chip [label]="boarder?.status" class="chip-approved"></p-chip>
-          <img [src]="svgPath + 'homeowner.svg'" pTooltip="Homeowner" />
+          <p-chip [pTooltip]="boarder?.status + ' Date: 10/10/2012 4:15:00 AM'" tooltipPosition="top" [label]="boarder?.status" [ngClass]="('chip-' + boarder?.status) | lowercase"></p-chip>
+          <img *ngIf="boarder?.type === onBoardingType[onBoardingType.individual]" [src]="svgPath + 'individual.svg'" pTooltip="Individual" />
+          <img *ngIf="boarder?.type === onBoardingType[onBoardingType.corporate]" [src]="svgPath + 'corporate.svg'" pTooltip="Corporate" />
         </div>
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    <div fxLayout="row" fxLayoutAlign="start start">
+      <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
+        <div class="actions-btns" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
+          <span class="p-buttonset" styleClass="p-button-sm">
+            <button styleClass="p-button-sm" tooltipPosition="left" pTooltip="Edit" pButton pRipple label="Edit" class="btn-edit" icon="pi pi-check"></button>
+            <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Delete" pButton pRipple label="Delete" class="btn-delete" icon="pi pi-trash"></button>
+        </span>
+        </div>
+        <!-- personal information -->
+        <div>
+          <div class="content-title" fxLayout="row" fxLayoutAlign="start center">Personal Information</div>
+          <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Lastname:</span>
+                <span>Fuertes</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Firstname:</span>
+                <span>Rey</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Middlename:</span>
+                <span>Senador</span>
+              </div>
+            </div>
+
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Citizenship:</span>
+                <span>Filipino</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Gender:</span>
+                <span>Male</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Marital Status:</span>
+                <span>Married</span>
+              </div>
+            </div>
+
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Date of Birth:</span>
+                <span>06-10-1985</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Occupation:</span>
+                <span>IT Professional</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Contact No.:</span>
+                <span>123454365</span>
+              </div>
+            </div>
+
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>ID Type:</span>
+                <span>Phil health</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>ID No.:</span>
+                <span>423 2342 25345</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Uploaded File:</span>
+                <span class="link">driverlicensed_1234.png</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- spouse information -->
+        <div>
+          <div class="content-title">Spouse Information</div>
+          <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Lastname:</span>
+                <span>Fuertes</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Firstname:</span>
+                <span>Haydee</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Middlename:</span>
+                <span>Alolor</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Citizenship:</span>
+                <span>Filipino</span>
+              </div>
+            </div>
+
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Gender:</span>
+                <span>Male</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Marital Status:</span>
+                <span>Married</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Date of Birth:</span>
+                <span>06-10-1985</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Occupation:</span>
+                <span>Housewife</span>
+              </div>
+            </div>
+
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Contact No.:</span>
+                <span>123454365</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>ID Type:</span>
+                <span>Drivers License</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>ID No.:</span>
+                <span>423 2342 25345</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Uploaded File:</span>
+                <span class="link">driverlicensed_1234.png</span>
+              </div>
+            </div>
+
+            <div class="pi-thumb" fxFlex="30">
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Business Address:</span>
+                <span>One Oasis Cebu St.</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Business Contact No.:</span>
+                <span>09564211445</span>
+              </div>
+              <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+                <span>Business Email:</span>
+                <span>haydeeskincare@gmail.com</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- documents -->
+        <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="5px">
+          <div *ngFor="let document of uploadDocuments" pTooltip="Download" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
+            <img [src]="svgPath + 'word.svg'" />
+            <span>{{ document?.label }}</span>
+          </div>
+        </div>
+      </div>
+      <div></div>
     </div>
   </mat-expansion-panel>
 </mat-accordion>
