--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.scss
@@ -22,6 +22,7 @@
   background-color: $color-gray-3;
   padding: 5px;
   margin-bottom: 5px;
+  cursor: pointer;
   img {
     width: 25px;
     height: 25px;
