--- a/src/styleguide/variables.scss
+++ b/src/styleguide/variables.scss
@@ -11,7 +11,6 @@ $color-white: #ffffff;
 $color-white-1: #fafafa;
 
 $color-primary: #1e8ae6;
-
 $color-blue:#2196F3;
 
 $color-green: #34a853;
@@ -21,7 +20,8 @@ $color-green-3: #c3eacd;
 
 $color-red: #f05350;
 
-$color-orange: #f05350;
+$color-orange: #fe7f02;
 
+$color-gray-blue: #607D8B;
 
 $box-shadow: 0px 4px 17px -11px rgba(0, 0, 0, 0.25);
