search, top nav and request page

--- a/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.scss
+++ b/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.scss
@@ -59,6 +59,9 @@ img {
   width: 25px;
 }
 :host ::ng-deep {
+  .mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover {
+    background: rgba(0,0,0,.04);
+  } 
   .btn-edit {
     background-color: $color-gray-3;
     border-color:  $color-gray-3;
