--- a/src/app/modules/dashboard/dashboard-page/dashboard-page.component.scss
+++ b/src/app/modules/dashboard/dashboard-page/dashboard-page.component.scss
@@ -5,8 +5,8 @@
     background-color: $color-white-1;
     height: auto;
 
-    cma-dashboard-on-boarding {
-      padding: 0 30px 30px 30px;
+    cma-dashboard-on-boarding, cma-dashboard-requests {
+      padding: 65px 30px 30px 30px;
     }
   }
 }
