--- a/src/app/modules/dashboard/dashboard-requests/dashboard-requests.component.html
+++ b/src/app/modules/dashboard/dashboard-requests/dashboard-requests.component.html
@@ -1,5 +1,5 @@
 
-<div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="5px">
+<div fxLayout="column" fxLayoutAlign="start start">
   <div class="panel-actions" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
     <cma-breadcrumb fxFlex="30" [items]="breadCrumbItems"></cma-breadcrumb>
     <div fxFlex fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
@@ -7,5 +7,4 @@
       <cma-multi-select fxFlex></cma-multi-select>
     </div>
   </div>
-  <cma-dashboard-on-boarding-panel></cma-dashboard-on-boarding-panel>
 </div>
