--- a/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
+++ b/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
@@ -15,7 +15,7 @@
         </div>
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <div fxLayout="row" fxLayoutAlign="start start">
+    <div class="noselect" fxLayout="row" fxLayoutAlign="start start">
       <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
         <div class="actions-btns" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
           <span class="p-buttonset" styleClass="p-button-sm">
@@ -169,7 +169,7 @@
 
         <!-- documents -->
         <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="5px">
-          <div *ngFor="let document of uploadDocuments" pTooltip="Download" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
+          <div *ngFor="let document of uploadDocuments" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
             <img [src]="svgPath + 'word.svg'" />
             <span>{{ document?.label }}</span>
           </div>
