--- a/src/app/shared/components/cma-top-nav/cma-top-nav.component.html
+++ b/src/app/shared/components/cma-top-nav/cma-top-nav.component.html
@@ -1,1 +1,25 @@
-<p-megaMenu [model]="items"></p-megaMenu>
+<div class="topnav-container">
+  <p-megaMenu fxFlex [ngClass]="{'onboarding': isOnboarding, 'requests': isRequests,'payments': isPayments}" [model]="menuItems"></p-megaMenu>
+  <div class="user-panel no-select" fxFlex="400px" fxLayoutAlign="end center" fxLayoutGap="25px">
+    <i (click)="op.toggle($event)" class="pi pi-bell p-mr-4 p-text-secondary" pBadge style="font-size: 1.5rem" [value]="'10+'" severity="danger"></i>
+    <i class="pi pi-comment p-mr-4 p-text-secondary" pBadge style="font-size: 1.5rem" [value]="'20+'"></i>
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+      <img [src]="imgPath + 'sample-profile-pic.png'" />
+      <span (click)="menu.toggle($event)">Rey Fuertes</span>
+      <i class="pi pi-angle-down" (click)="menu.toggle($event)"></i>
+    </div>
+  </div>
+  <p-menu #menu [popup]="true" [model]="userMenuItems"></p-menu>
+  
+  <p-overlayPanel #op [showCloseIcon]="true" [style]="{width: '450px'}" [dismissable]="true" [showCloseIcon]="false">
+    <ng-template pTemplate>
+        <p-table [value]="notifications" selectionMode="single" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="5">
+            <ng-template pTemplate="body" let-rowData let-notification>
+                <tr [pSelectableRow]="rowData">
+                    <td>{{notification?.label}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </ng-template>
+  </p-overlayPanel>
+</div>
