--- a/src/app/modules/dashboard/dashboard-requests/dashboard-requests.component.html
+++ b/src/app/modules/dashboard/dashboard-requests/dashboard-requests.component.html
@@ -1,10 +1,14 @@
 
-<div fxLayout="column" fxLayoutAlign="start start">
-  <div class="panel-actions" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+<div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+  <div class="breadcrumb-container" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
     <cma-breadcrumb fxFlex="30" [items]="breadCrumbItems"></cma-breadcrumb>
+  </div>
+  <div class="panel-actions">
     <div fxFlex fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
       <cma-input-search fxFlex="70"></cma-input-search>
       <cma-multi-select fxFlex></cma-multi-select>
     </div>
+    <p-paginator [rows]="10" [totalRecords]="120" [rowsPerPageOptions]="[10,20,30]"></p-paginator>
   </div>
+  <cma-dashboard-requests-table></cma-dashboard-requests-table>
 </div>
