--- a/src/styleguide/variables.scss
+++ b/src/styleguide/variables.scss
@@ -12,16 +12,23 @@ $color-white-1: #fafafa;
 
 $color-primary: #1e8ae6;
 $color-blue:#2196F3;
+$color-blue-1:#64b6f6;
+$color-blue-2:#9bd3fe;
+$color-blue-3:#e0f0fd;
 
 $color-green: #34a853;
 $color-green-1: #22cc96;
 $color-green-2: #7ae0c0;
 $color-green-3: #c3eacd;
-
 $color-red: #f05350;
-
+$color-red-1: #fd807e;
+$color-red-2: #fd8d8b;
 $color-orange: #fe7f02;
-
 $color-gray-blue: #607D8B;
+$color-violet: #3f51b5;
+$color-violet-1: #7f90f1;
+$color-pink: #ff4081;
+$color-pink-1: #fe6b9d;
+
 
 $box-shadow: 0px 4px 17px -11px rgba(0, 0, 0, 0.25);
