--- a/src/app/modules/dashboard/dashboard-on-boarding/dashboard-on-boarding.component.html
+++ b/src/app/modules/dashboard/dashboard-on-boarding/dashboard-on-boarding.component.html
@@ -1,7 +1,12 @@
 
 <div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="5px">
   <div class="breadcrumb-container" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-    <cma-breadcrumb fxFlex="30" [items]="breadCrumbItems"></cma-breadcrumb>
+    <cma-breadcrumb fxFlex [items]="breadCrumbItems"></cma-breadcrumb>
+    <div class="settings" fxFlex="100px" fxLayout="row" fxLayoutAlign="end center">
+      <i pTooltip="Refresh" tooltipPosition="top" class="pi pi-refresh"></i>
+      <i pTooltip="Actions" tooltipPosition="top" (click)="menu.toggle($event)" class="pi pi-cog"></i>
+      <p-menu #menu [popup]="true" [model]="settingItems"></p-menu>
+    </div>
   </div>
   <div class="panel-actions">
     <div fxFlex fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
