--- a/src/styleguide/atoms/chip.scss
+++ b/src/styleguide/atoms/chip.scss
@@ -1,6 +1,6 @@
 .chip-approved .p-chip {
-  background-color: $color-green;
-  border-color: $color-green;
+  background-color: $color-green-1;
+  border-color: $color-green-1;
   color: $color-white;
 }
 .chip-orientation .p-chip {
