--- a/src/app/modules/dashboard/dashboard-on-boarding/dashboard-on-boarding.component.scss
+++ b/src/app/modules/dashboard/dashboard-on-boarding/dashboard-on-boarding.component.scss
@@ -5,6 +5,25 @@
 .panel-actions {
   width: 100%;
 }
+.settings i {
+  cursor: pointer;
+}
+.pi-refresh {
+  margin-right: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  width: 25px;
+  &:hover {
+    color: $color-blue;
+  }
+}
+.pi-cog {
+  font-size: 20px;
+  width: 25px;
+  &:hover {
+    color: $color-blue;
+  }
+}
 div {
   width: 100%;
 }
@@ -13,6 +32,9 @@ div {
   margin-bottom: 0 !important;
 }
 :host ::ng-deep {
+  .p-paginator .p-paginator-pages .p-paginator-page {
+    margin: 0;
+  }
   li.p-megamenu-root-list>.p-menuitem {
     background-color: $color-gray-3 !important;
   }
