--- a/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
+++ b/src/app/modules/dashboard/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
@@ -32,7 +32,7 @@
           <div fxFlex="135px" class="actions-btns" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
             <span class="p-buttonset" styleClass="p-button-sm">
               <button styleClass="p-button-sm" tooltipPosition="left" pTooltip="Done" pButton pRipple class="btn-done" icon="pi pi-check"></button>
-              <button styleClass="p-button-sm" tooltipPosition="left" pTooltip="Edit" pButton pRipple class="btn-edit" icon="pi pi-pencil"></button>
+              <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Edit" pButton pRipple class="btn-edit" icon="pi pi-pencil"></button>
               <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Remove" pButton pRipple class="btn-remove" icon="pi pi-trash"></button>
             </span>
           </div>
