--- a/src/styleguide/variables.scss
+++ b/src/styleguide/variables.scss
@@ -15,6 +15,7 @@ $color-blue:#2196F3;
 $color-blue-1:#64b6f6;
 $color-blue-2:#9bd3fe;
 $color-blue-3:#e0f0fd;
+$color-blue-4:#ecf5fd;
 
 $color-green: #34a853;
 $color-green-1: #22cc96;
