homeowners and table, documents and payments

--- a/src/app/modules/dashboard/dashboard-page/dashboard-page.component.scss
+++ b/src/app/modules/dashboard/dashboard-page/dashboard-page.component.scss
@@ -5,7 +5,11 @@
     background-color: $color-white-1;
     height: auto;
 
-    cma-dashboard-on-boarding, cma-dashboard-requests {
+    cma-dashboard-on-boarding,
+    cma-dashboard-requests,
+    cma-dashboard-homeowners,
+    cma-dashboard-payments,
+    cma-dashboard-documents {
       padding: 10px 30px 30px 30px;
     }
   }
