--- a/src/app/modules/dashboard/dashboard-requests-table/dashboard-requests-table.component.scss
+++ b/src/app/modules/dashboard/dashboard-requests-table/dashboard-requests-table.component.scss
@@ -16,7 +16,7 @@ table {
 .inner-container {
   min-height: 170px;
   width: 100%;
-  border-top: thin $color-gray-2 solid;
+  border-top: thin $color-gray-3 solid;
   background-color: $color-gray-4;
   padding: 15px;
 }
@@ -44,6 +44,9 @@ table {
   margin-top: 25px;
 }
 :host ::ng-deep {
+  mat-row, mat-header-row, mat-footer-row, th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
+    border-bottom-color: rgba(0,0,0,.05);
+  }
   .p-button {
     padding: 5px 10px;
     font-size: 12px;
@@ -72,7 +75,7 @@ table {
     font-weight: 700;
   }
   tr.expanded-row {
-    background-color: $color-blue-3 !important;
+    background-color: $color-blue-4 !important;
   }
   th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
     padding-left: 0;
