--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -6,3 +6,5 @@
 @import './atoms/scrollbar';
 @import './atoms/chip';
 @import './atoms/paginator';
+@import './atoms/dropdown';
+@import './atoms/table';
