--- a/src/app/modules/dashboard/dashboard-requests-table/dashboard-requests-table.component.html
+++ b/src/app/modules/dashboard/dashboard-requests-table/dashboard-requests-table.component.html
@@ -22,7 +22,7 @@
         <span *ngIf="column !== 'image' && column !== 'service_type' && column !== 'other' && column !== 'status'"> {{element[column]}}</span>
       </td>
     </ng-container>
-
+    <!-- detail -->
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element; let i = index" [attr.colspan]="columnsToDisplay.length" [ngClass]="{'expand-container': expandedElement}">
         <div class="element-detail" [@detailExpand]="(element == expandedElement || i === 0) ? 'expanded' : 'collapsed'">
